# Martin

./: .gitignore  CMakeLists.txt  README.md
include/martin/: bot.hpp
src/: main.cpp
src/bot/: bot.cpp
